temp/ingress/hello-world-ingress-cert.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - gnom.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: gnom.eastus.cloudapp.azure.com
    http:
      paths:
        - path: /hello-world-one(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: aks-helloworld-one
              port:
                number: 80
        - path: /hello-world-two(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: aks-helloworld-two
              port:
                number: 80
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: aks-helloworld-one
              port:
                number: 80
